packages/amplication-client/src/ServiceConnections/ServiceTopics.scss
@import "../style/index.scss";

.service-topics {

  &__header {
    display: flex;
    flex-direction: column;
    gap: var(--large-spacing);
    
    &__top {  
      display: flex;
      align-items: center;
      gap: var(--default-spacing-small);

      &__title {
        font-size: 18px;
        font-weight: 600;  
      }
    }

    &__description {
      font-weight: 400;
      font-size: 14px;
      color: white;
    } 

    .toggle-field {
      margin-left: auto;
      margin-bottom: 0;
    }

  }

  .amp-form {
    > .amp-horizontal-rule {
      margin: 24px 0;
    }
  }
}

